test/project/force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>SampleNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>