test/project/force-app/main/default/objects/Sample__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>