test/project/force-app/main/default/objects/Sample__c/fields/EncryptedText__c.field-meta.xml
<CustomField>
    <fullName>EncryptedText__c</fullName>
    <label>EncryptedText</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>