test/project/force-app/main/default/objects/Sample__c/fields/Html__c.field-meta.xml
<CustomField>
    <fullName>Html__c</fullName>
    <label>Html</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>