test/project/force-app/main/default/objects/Sample__c/fields/LongTextArea__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea__c</fullName>
    <label>LongTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>