test/project/force-app/main/default/objects/Sample__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lookup_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>