test/project/force-app/main/default/objects/Sample__c/fields/MultiselectPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiselectPicklist__c</fullName>
    <label>MultiselectPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fruit</valueSetName>
    </valueSet>
</CustomField>