test/project/force-app/main/default/objects/Sample__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <summarizedField>DetailObject__c.Amount__c</summarizedField>
    <summaryForeignKey>DetailObject__c.MasterDetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>