test/project/force-app/main/default/objects/Sample__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <label>TextArea</label>
    <type>TextArea</type>
</CustomField>